--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -168,9 +168,9 @@
                     <nav class="main-nav desk">
                       {% if s.menu_r.links.size > 0 %}
                         <ul>     
-                          <li class="padding-y-m"><a href="/pages/rewards">Rewards</a></li>  
+                          <li class="padding-y-m"><a href="/pages/rewards"><span class="upsell-text">NEW</span>Rewards</a></li>  
                           {% for link in s.menu_r.links %}                            
-                            <li class="padding-y-m"><a href="{{ link.url }}">{{ link.title }}</a></li>
+                            <li class="padding-y-m"><a href="{{ link.url }}">{% if link.title contains 'badge_' %}<span class="upsell-text">{{ link.title |  split: 'badge_' | slice: 1,2 }}</span>{% endif %}{{ link.title |  remove: 'badge_NEW' |  remove: 'megamenu'   }}</a></li>
                           {% endfor %}               
                         </ul>
                     {% endif %}
