--- a/sections/cart-drawer.liquid
+++ b/sections/cart-drawer.liquid
@@ -165,7 +165,7 @@
                 <h6>TOTAL PROTEIN IN YOUR CART</h6><h6>{{totalCartProtein}}g</h6>
             </div>
             <div class="flex flex-y-align flex-space-between">
-                <h6>TOTAL POINT EARNINGS</h6><h6><span data-lion-points-for="{{ cart.total_price }}"></span></h6>
+                <h6>TOTAL POINT EARNINGS</h6><h6><span data-lion-points-for="{{ cart.total_price }}">0</span>pts</h6>
             </div>
         </div>
         {% endif %}
