adding trustpilot to pdp

--- a/sections/html-content.liquid
+++ b/sections/html-content.liquid
@@ -47,7 +47,7 @@
                 "type":"number",
                 "id": "max-width",
                 "label": "Max Width",
-                "info": "Set the max width of the section. Default is 1200px."
+                "info": "Set the max width of the section."
             }
         ],
         "presets": [
