changed trustpilot on pdd and made protein calc in cart only show decimal if needed

--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -78,12 +78,16 @@
                   {{ product.metafields.judgeme.badge }} 
                 </div> 
               <!-- End of Judge.me code -->
-
-<!-- TrustBox widget - Flex -->
-<div class="trustpilot-widget" data-locale="en-US" data-template-id="54197383fd9dceac42a68694" data-businessunit-id="63bbd816acde6c1b254abed2"  data-style-width="100%" data-style-size="XS" data-headline="star" data-external-elements-color="dark">
+<!-- TrustBox widget - Micro TrustScore -->
+<div class="trustpilot-widget" data-locale="en-US" data-template-id="5419b637fa0340045cd0c936" data-businessunit-id="63bbd816acde6c1b254abed2" data-style-height="20px" data-style-width="100%">
   <a href="https://www.trustpilot.com/review/wearethecurators.com" target="_blank" rel="noopener">Trustpilot</a>
 </div>
 <!-- End TrustBox widget -->
+<!-- TrustBox widget - Flex 
+<div class="trustpilot-widget" data-locale="en-US" data-template-id="54197383fd9dceac42a68694" data-businessunit-id="63bbd816acde6c1b254abed2"  data-style-width="100%" data-style-size="XS" data-headline="star" data-external-elements-color="dark">
+  <a href="https://www.trustpilot.com/review/wearethecurators.com" target="_blank" rel="noopener">Trustpilot</a>
+</div>
+End TrustBox widget -->
             </div>
             <div class="flex-box badge-wrapper">
               {% for item in product.metafields.custom.badge.value %}
