--- a/sections/cart-drawer.liquid
+++ b/sections/cart-drawer.liquid
@@ -162,7 +162,15 @@
         {% if totalCartProtein > 0 %}
         <div class=" total-protein-cart padding-default border-btm">
             <div class="flex flex-y-align flex-space-between">
-                <h6>TOTAL PROTEIN IN YOUR CART</h6><h6>{{totalCartProtein}}g</h6>
+                <h6>TOTAL PROTEIN IN YOUR CART</h6>
+                <h6>
+                    {% assign protein_int = totalCartProtein | round %}
+                    {% if totalCartProtein == protein_int %}
+                        {{ protein_int }}g
+                    {% else %}
+                        {{ totalCartProtein }}g
+                    {% endif %}
+                </h6>
             </div>
             <div class="flex flex-y-align flex-space-between">
                 <h6>TOTAL POINT EARNINGS</h6><h6><span data-lion-points-for="{{ cart.total_price }}">0</span>pts</h6>
