--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -132,7 +132,7 @@
                     <ul class="flex flex-col">
                       {% for link in s.menu_mobi.links %}
                         
-                        <li class="{% if link.links.size > 0 %}has-sub-menu-item{% endif %}"><a href="{{ link.url }}">{{ link.title }}</a>                                    
+                        <li class="{% if link.links.size > 0 %}has-sub-menu-item{% endif %}"><a href="{{ link.url }}">{{ link.title |  remove: 'badge_NEW'  }}{% if link.title contains 'badge_' %}<span class="upsell-text">{{ link.title |  split: 'badge_' | slice: 1,2 }}</span>{% endif %}</a>                                    
                                     {% if  link.links.size > 0 %}                                      
                                       <ul class="sub-menu">
                                         {% for child_link in link.links %}
