--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -45,6 +45,7 @@
     {{ 'custom.css' | asset_url | stylesheet_tag }}
     {{ 'product.css' | asset_url | stylesheet_tag }}
     {{ 'loyalty-lion.css' | asset_url | stylesheet_tag }}
+    {{ 'min-maxify.css' | asset_url | stylesheet_tag }}
     <script type="text/javascript" src="//widget.trustpilot.com/bootstrap/v5/tp.widget.bootstrap.min.js" async></script>
   </head>
 
