--- a/sections/main-collection-product-grid.liquid
+++ b/sections/main-collection-product-grid.liquid
@@ -168,7 +168,7 @@
                                             <span class="button__flair"></span>
                                             <span class="button__label">
                                              
-                                                <span class="btn-txt">{% if product.available %}{% if enable_button_variation == true and button_label != blank %}{{ button_label }}{% else %}Add to Cart{% endif %}{% else %}SOLD OUT{% endif %}</span>&nbsp;-&nbsp;<span class="btn-display-price card__product-price">{{ currrent_variant.price |  money }}</span>
+                                                <span class="btn-txt" data-btn-text="{% if product.available %}{% if button_details != blank and enable_button_variation == true %}{{button_label}}{% else %}Add to Cart{% endif %}{% else %}SOLD OUT {% endif %}">{% if product.available %}{% if enable_button_variation == true and button_label != blank %}{{ button_label }}{% else %}Add to Cart{% endif %}{% else %}SOLD OUT{% endif %}</span>&nbsp;-&nbsp;<span class="btn-display-price card__product-price">{{ currrent_variant.price |  money }}</span>
                                             </span>
                                         </div>
                                     </div>
