--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -249,7 +249,7 @@ End TrustBox widget -->
                         <div class="button button--stroke on__time-purchase btn btn-secondary btn-medium flex flex-x-align flex-y-align showCart add__card-product add__to-cart" data-block="button">
                           <span class="button__flair"></span>
                           <span class="button__label">
-                            <span class="btn-txt">{% if product.available %}{% if button_details != blank and enable_button_variation == true %}{{button_label}}{% else %}Add to Cart{% endif %}{% else %}SOLD OUT {% endif %}</span>&nbsp;-&nbsp;<span class="btn-display-price product__variant-price">{{ product.selected_or_first_available_variant.price | money }}</span>
+                            <span class="btn-txt" data-btn-text="{% if product.available %}{% if button_details != blank and enable_button_variation == true %}{{button_label}}{% else %}Add to Cart{% endif %}{% else %}SOLD OUT {% endif %}">{% if product.available %}{% if button_details != blank and enable_button_variation == true %}{{button_label}}{% else %}Add to Cart{% endif %}{% else %}SOLD OUT {% endif %}</span>&nbsp;-&nbsp;<span class="btn-display-price product__variant-price">{{ product.selected_or_first_available_variant.price | money }}</span>
                           </span>
                         </div> 
                         {% if subtext != blank and enable_button_variation == true %}<span class="caption txt-ctr">{{ subtext }}</span>{% endif %}
