--- a/sections/hero.liquid
+++ b/sections/hero.liquid
@@ -18,8 +18,8 @@
                             
                                 <div class="fadeIn flex flex-col content-wrap">
                                     {% comment %} {{ s.text |  replace: '<h2', '<h2 class="h5"' |  replace: '<strong>', '<span class="pos-relative">' |  replace: '</strong>', '</span>' |  replace: '<em>', '<span class="pos-absolute underline-animation"><img src="{{ 'Underline.svg' |  asset_url}}" alt="">' |  replace: '</em>', '</span>'  }} {% endcomment %}
-{% assign image_insert = s.image_insert %}
-{%- capture image -%}{% render 'responsive-image' with image:image_insert, class:'inline-img' %}{%- endcapture -%}
+                                    {% assign image_insert = s.image_insert %}
+                                    {%- capture image -%}{% render 'responsive-img' with image:image_insert, class:'inline-img' %}{%- endcapture -%}
                                     <h1><span class="pos-relative">{{ s.deco_text | replace: '[image]', image }}
                                         <span class="pos-absolute underline-animation"><img src="{{'Underline.svg' |  asset_url}}" alt=""></span>
                                         </span>
