--- a/assets/style.css
+++ b/assets/style.css
@@ -1578,7 +1578,6 @@ object-fit: contain;
 ----------------------------------------------------------------------------------
 */
 @media only screen and (min-width: 768px) and (max-width: 991px) {
-  .page-header-visual { width: 40%;}
   .headroom--not-top.slideup + .main-wrap  .shop-filter-container { top: 0px;}
     /*    Default Layout Start
     -------------------------------------------------------------------------------
@@ -2251,7 +2250,9 @@ object-fit: contain;
 }
 
 
-
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  .page-header-visual { width: 40%;}
+}
 
 
 
