adding call to action banner

--- a/sections/call-top-action-banner.liquid
+++ b/sections/call-top-action-banner.liquid
@@ -1,7 +1,7 @@
 {% liquid
     assign s = section.settings 
 %}
-       <div class="margin-bottom-m parallax-trigger call-to-action-sml-section">
+       <div class="margin-bottom-m parallax-trigger">
         <div class="page-container xl-container common-wrap clear">
             <div class="pos-relative br-30x has-turquoise-background call-to-action-sml-wrapper lg:padding-left-xl lg:padding-right-xl flex-box flex-space-between" >
                 <div class="flex flex-col padding-y-l padding-left-default padding-right-default lg:padding-y-default lg:padding-left-xs lg:padding-right-xs content-wrap">
